# calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator.cpp  calculator.h  calculator.pro  main.cpp
src/: calculator.cpp  calculator.h  calculator.ui
